--- a/all_together.html
+++ b/all_together.html
@@ -13,42 +13,40 @@
 	<div class="wrapper">
 		<div class="content">
 			<div class="box head">
-				<h1>Resume Jan Moons OK</h1>
+				<h1>Resume Warre Heytens</h1>
 			</div>
 			
 			<div class="box sidebar">
-				<div class="personalimage"><img src="professor.JPG"/></div>
+				<div class="personalimage"><img src="resume-photo-warre_heytens.jpg"/></div>
 				<div class="personaldetails">
-					<div class="personaldetailitem">Prof. dr. Jan Moons</div>
-					<div class="personaldetailitem">01/12/1972</div>
-					<div class="personaldetailitem">Gent</div>
+					<div class="personaldetailitem">Mr. Warre Heytens</div>
+					<div class="personaldetailitem">09/11/2003</div>
+					<div class="personaldetailitem">Roeselare</div>
 				</div>
 			</div>
 			<div class="box experience">
 				<h2>Experience</h2>
 				<div class="experienceitem">
 					<div class="experienceheader">
-						<span class="experiencedate">2010 - now</span>
-						<span class="experiencetitle">CEO The Master Labs</span>
+						<span class="experiencedate">2021 - now</span>
+						<span class="experiencetitle">Bachelor of Science in Business Administration at UGent</span>
 					</div>
 					<div class="experienceitemcontent">
-						The Master Labs is a service organization that helps you build better experiences, operations
-						and digital products. We also share our knowledge with others through our Academy.
+						I am currently in my third bachelor and I was nominated for the "FEB Student Excellence Programme" in my second bachelor.
 					</div>
 				</div>
 				<div class="experienceitem">
 					<div class="experienceheader">
-						<span class="experiencedate">2010 - now</span>
-						<span class="experiencetitle">Professor at UGent</span>
+						<span class="experiencedate">2017 - 2021</span>
+						<span class="experiencetitle">Science and Mathematics at Broederschool Instituut O.-L.-V. Van Vreugde</span>
 					</div>
 					<div class="experienceitemcontent">
-						Jan Moons is responsible for the course Creating Value With Websites, and hopes his students
-						become infatuated with digital.
+						I started in Science and chose to combine it with Mathematics in 2019.
 					</div>
 				</div>
 			</div>
 			<div class="box foot">
-				<div>&copy; Jan Moons 2022</div>
+				<div>&copy; Warre Heytens 2023</div>
 			</div>
 		</div>
 	</div>
