--- a/all_together.html
+++ b/all_together.html
@@ -29,7 +29,8 @@
 				<div class="experienceitem">
 					<div class="experienceheader">
 						<span class="experiencedate">2021 - now</span>
-						<span class="experiencetitle">Bachelor of Science in Business Administration at UGent</span>
+						<span class="experiencetitle">Bachelor of Science in Business Administration</span>
+						<span class="experiencetitle">at UGent</span>
 					</div>
 					<div class="experienceitemcontent">
 						I am currently in my third bachelor and I was nominated for the "FEB Student Excellence Programme" in my second bachelor.
